Fix list resume overflow problem

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1197,6 +1197,10 @@ video {
        column-gap: 2.5rem;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
